--- a/views/ninjitsu/result.ejs
+++ b/views/ninjitsu/result.ejs
@@ -9,42 +9,53 @@
     <div class="col-md-4 col-md-offset-2">
       <div id='map'></div>
         <script>
-console.log(<%= finalPick[0].location.coordinate.latitude %>, <%= finalPick[0].location.coordinate.longitude %>)
-          var myPoints = [{lat: <%= finalPick[0].location.coordinate.latitude %>, lng: <%= finalPick[0].location.coordinate.longitude %>, name: '<%= finalPick[0].name %>' }];
+          var myPoints = [{lat: <%= finalPick[0].location.coordinate.latitude %>,
+          lng: <%= finalPick[0].location.coordinate.longitude %>,
+          name: '<%= finalPick[0].name %>' }];
           drawMap(myPoints)
         </script>
       <!-- <img class='img-responsive img-rounded' src="http://www.fillmurray.com/460/300"> -->
-      <p>map goes here</p>
     </div>
     <div class="col-md-6">
-      <h2><a href='<%= finalPick[0].url %>'><%= finalPick[0].name %></a></h2>
-      <ul>
-        <li>
-          <% finalPick[0].categories.forEach(function(item, pos){ %>
-          <em><%= finalPick[0].categories[pos][0] %></em>
-            <% if(pos < (finalPick[0].categories.length - 1)){%>, <% } %>
-          <% }) %>
-        </li>
-      </ul>
-      <p><img src='<%= finalPick[0].rating_img_url %>'></p>
-      <div class="row">
-        <div class="col-md-5 col-md-offset-1">
-          <p><strong><%= finalPick[0].location.display_address[0] %></strong></p>
-          <p><%= finalPick[0].location.display_address[1] %></p>
-          <p><%= finalPick[0].display_phone %></p>
+      <div class="result-info">
+        <h2><a href='<%= finalPick[0].url %>'><%= finalPick[0].name %></a></h2>
+        <ul>
+          <li>
+            <% finalPick[0].categories.forEach(function(item, pos){ %>
+            <em><%= finalPick[0].categories[pos][0] %></em>
+              <% if(pos < (finalPick[0].categories.length - 1)){%>, <% } %>
+            <% }) %>
+          </li>
+        </ul>
+        <p id='small-jumbo' >Yelp Avg. Review</p>
+        <p><img class='yelp-rating' src='<%= finalPick[0].rating_img_url_large %>'></p>
+        <div class="row">
+          <div class="col-md-8">
+            <p><strong><%= finalPick[0].location.display_address[0] %></strong></p>
+            <% for(var i = 1; i < finalPick[0].location.display_address.length; i++) { %>
+              <p><%= finalPick[0].location.display_address[i] %></p>
+            <% } %>
+            <p><%= finalPick[0].display_phone %></p>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class="buttons">
+<div class="row">
   <div class="text-center">
-  <form>
-    <button class='btn btn-lg btn-success'>I'm eating here!</button>
-  </form>
-  <form>
-    <button class='btn btn-default'>Try again</button>
-  </form></div>
+    <div class="col-md-2 col-md-offset-4">
+      <form>
+        <button id='eating-here-btn' class='btn btn-lg btn-success'>I'm eating here!</button>
+      </form>
+    </div>
+    <div class="col-md-2">
+      <form>
+        <button id='try-again-btn' class='btn btn-default'>Try again</button>
+      </form>
+    </div>
+
+  </div>
 </div>
 <div class="container">
   <div class="row">
