--- a/views/ninjitsu/search.ejs
+++ b/views/ninjitsu/search.ejs
@@ -1,5 +1,6 @@
 <% include ../partials/header %>
 <% include ../partials/nav %>
+
 <div class="container">
   <div class="row">
     <div id='search-form' class="col-md-8 col-md-offset-2">
@@ -7,6 +8,7 @@
         <form action='ninjitsu/result' id='location-feild' method='post' class='signup-form'>
           <input id='search-location' name='location' type="text" class='form-control' placeholder='My location'>
           <h2 class='center'>Ninja Options</h2>
+          <% include ../partials/alerts.ejs %>
           <% if (!loggedIn) { %>
           <p><em>Note: Want to ninja your lunch break? You can have your lunch break ninja'd without signing up for a free accout, but just imagine how much better your results will be when results are personalized to your tastes!</em></p>
           <% } %>
@@ -14,7 +16,7 @@
           <div class="form-group">
             <div class="radio">
               <label>
-                  <input type="radio" name="distanceRadios" id="distanceRadios1" value="1200" checked>
+                  <input type="radio" name="distanceRadios" id="distanceRadios1" value="800" checked>
                   Walking distance (1/2 Mile)
               </label>
             </div>
