--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,5 +13,6 @@
   <script type="text/javascript" src="/js/script.js"></script>
   <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.8/mapbox.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.8/mapbox.css' rel='stylesheet' />
+  <meta name="viewport" content="width=device-width">
 </head>
 <body>
