added likes and dislikes to history

--- a/views/ninjitsu/search.ejs
+++ b/views/ninjitsu/search.ejs
@@ -6,7 +6,7 @@
     <div id='search-form' class="col-md-8 col-md-offset-2">
 
         <form action='ninjitsu/result' id='location-feild' method='post' class='signup-form'>
-          <input id='search-location' name='location' type="text" class='form-control' placeholder='My location'>
+          <input id='search-location' name='location' type="text" class='form-control' placeholder='My location. Allow us to autofill by accepting location request.'>
           <h2 class='center'>Ninja Options</h2>
           <% include ../partials/alerts.ejs %>
           <% if (!loggedIn) { %>
