--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,5 @@
-
+<div class="well well-sm">
+<p class='center'><a href="http://www.yelp.com"><img  src="../img/yelp.png"></a></p>
+</div>
 </body>
 </html>
