--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,9 @@
 }*/
 
 /*Global*/
+body, html {
+    height:100%;
+}
 
 .user-name {
   color: white;
@@ -19,7 +22,14 @@
     /*left: 50%;*/
     width: 100%;
 
+  z-index: 90;
+}
+
+.find-lunch-btn {
   z-index: 99;
+  text-align: center;
+  width: 100%;
+  margin-top: 2.5%;
 }
 
 .title-text {
@@ -32,6 +42,14 @@
   position: absolute;
   font-size: 4em;
   font-weight: 700;
+  margin-top: 50px;
+}
+
+.subtitle-text {
+  text-align: right;
+  position: relative;
+  /*margin-top: 100px;*/
+  width: 90%;
 }
 
 .glass {
@@ -47,6 +65,19 @@
 }
 
 /*Results Page*/
+
+.pointer:hover {
+  cursor: pointer;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+}
+
+.iframe-container {
+  min-height: 90%;
+}
 
 .quote-img {
   padding-right: 20px;
@@ -78,7 +109,7 @@ h1 {
 }
 
 .signup-form {
-  background-color: lightgrey;
+  background-color: #F8F8F8;
   border-radius: 10px;
   padding: 3%;
 }
