--- a/views/ninjitsu/result.ejs
+++ b/views/ninjitsu/result.ejs
@@ -1,6 +1,24 @@
+<div class="modal fade" id="yelp-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+
+      </div>
+      <div class="modal-body">
+        <div class="iframe-container">
+          <iframe src="<%= finalPick[0].url %>"></iframe>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+      </div>
+    </div>
+  </div>
+</div>
 <% include ../partials/header %>
 <% include ../partials/nav %>
-
 <div class="row">
   <h1>Your lunch break has been <em>ninja'd!</em></h1>
 </div>
@@ -18,7 +36,17 @@
     </div>
     <div class="col-md-6">
       <div class="result-info">
-        <h2><a href='<%= finalPick[0].url %>'><%= finalPick[0].name %></a></h2>
+        <h2><a class='pointer' data-toggle="modal" data-target="#yelp-modal">
+          <%= finalPick[0].name %>
+        </a></h2>
+
+
+        <!-- Button trigger modal -->
+
+
+
+
+
         <ul>
           <li>
             <% finalPick[0].categories.forEach(function(item, pos){ %>
@@ -55,7 +83,9 @@
       <%if(!loggedIn){%> <p><small><span class='glyphicon glyphicon-arrow-up'></span> Please create a free account to use this feature</small></p><%}%>
     </div>
     <div class="col-md-2">
-      <form>
+      <form method="post" action='/ninjitsu/result'>
+        <input type='hidden' name='location' value='<%= location %>'>
+        <input type='hidden' name='distanceRadios' value='<%= distanceRadios %>'>
         <button id='try-again-btn' class='btn btn-default'>Try again</button>
       </form>
     </div>
@@ -67,7 +97,9 @@
     <div class="col-md-8 col-md-offset-2">
       <blockquote>
       <img class='img-responsive img-rounded pull-left quote-img' src='<%= finalPick[0].snippet_image_url %>'>
-      <p>"<%= finalPick[0].snippet_text %>" <br><a href='<%= finalPick[0].url %>'><em>Read More...</em></a></p>
+      <p>"<%= finalPick[0].snippet_text %>" <br><a class='pointer' data-toggle="modal" data-target="#yelp-modal">
+          <em>Read More...</em>
+        </a></p>
       </blockquote>
     </div>
   </div>
