fixed issues with signup & fixed no search res error

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,6 +1,10 @@
 <% include ../partials/header %>
 <% include ../partials/nav %>
 
+<div id="dialog" title="Email already used">
+  <p>Please sign in.</p>
+</div>
+
 <div class="container">
 
   <div class='signup-1'>
@@ -69,7 +73,7 @@
             </div>
           </div>
 
-          <button type="submit" class="btn btn-default">Submit</button>
+          <a href='/ninjitsu' class="btn btn-default">Submit</a>
         </form>
       </div>
     </div>
