fixed history buttons and some style issues

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <% include ./partials/nav %>
 <% include ./partials/alerts.ejs %>
 <div class=" row header-splash">
-  <img class='image-responsive glass' src="/img/head.jpeg">
+  <img id='home-pic' class='image-responsive glass' src="/img/head.jpeg">
   <div class="title-pane">
   <h1 class='title-text'>Lunch Break Ninja</h1>
   <h3 class='subtitle-text'>Find a great place to eat in seconds, no thought required.</h3>
