--- a/views/user/history.ejs
+++ b/views/user/history.ejs
@@ -11,10 +11,7 @@
           <tbody>
 
           <% history.forEach(function(item, loc){ %>
-            <tr <% if(history[loc].like === true){ %>class='success'
-            <%} else if (history[loc].meh === true){%> class='warning'
-            <%} else if (history[loc].like === false){%> class='danger'
-            <%} %>>
+            <tr>
               <td>
                 <h3><%= history[loc].restaurant %></h3>
                 <p><strong>Last visited:</strong> <%= history[loc].updatedAt %></p>
@@ -24,18 +21,18 @@
                 <form class='like-btn'>
                   <input type="hidden" name='id' value='<%= history[loc].id %>'>
                   <input type="hidden" name='like' value='true'>
-                  <button class='btn btn-success <% if(history[loc].like === true){ %>active<%} %>'><span class='glyphicon glyphicon-thumbs-up'></span></button>
+                  <button class='btn  <% if(history[loc].like === true){ %>btn-success<%} else {%>btn-default<% } %>'><span class='glyphicon glyphicon-thumbs-up'></span></button>
                 </form>
                 <form class='meh-btn'>
                   <input type="hidden" name='like' value='false'>
                   <input type="hidden" name='meh' value='true'>
                   <input type="hidden" name='id' value='<%= history[loc].id %>'>
-                  <button class='btn btn-warning dislike-btn <% if(history[loc].meh === true){ %>active<%} %>'>meh.</button>
+                  <button class='btn   <% if(history[loc].meh === true){ %>btn-warning<%} else {%>btn-default<% } %>'>meh.</button>
                 </form>
                 <form class='unlike-btn'>
                   <input type="hidden" name='id' value='<%= history[loc].id %>'>
                   <input type="hidden" name='like' value='false'>
-                  <button class='btn btn-danger dislike-btn <% if(history[loc].like === false){ %>active<%} %>'><span class='glyphicon glyphicon-thumbs-down'></span></button>
+                  <button class='btn  dislike-btn <% if(history[loc].like === false){ %>btn-danger<%} else {%>btn-default<% } %>'><span class='glyphicon glyphicon-thumbs-down'></span></button>
                 </form>
                 </div>
               </td>
