--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 <% include ./partials/nav %>
-<% include ./partials/alerts.ejs %>
+<% include ./partials/beta.ejs %>
 <div class=" row header-splash">
   <img id='home-pic' class='image-responsive glass' src="/img/head.jpeg">
   <div class="title-pane">
