added favicon, beta message, and other fun stuffpart 3

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -74,3 +74,7 @@
     </div>
   </div><!-- /.container-fluid -->
 </nav>
+<div class="row">
+  <h3 class='center'>Beta Version</h3>
+  <p class='center'>Check back often for more features</p>
+</div>
