hopefully fixed router issue on Heroku

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -48,7 +48,7 @@
 
 <div class="row">
   <h4 class='center'>Beta Version</h4>
-  <p class='center'>Check back often for more features. <a href="/main/changelog">Change log</a></p>
+  <p class='center'>Check back often for more features.</p>
 </div>
 
 
