--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Lunch Break Ninja - Take the thought out of Lunch</title>
-  <link rel="icon" href="img/favicon/favicon.ico">
+  <link rel="icon" href="../../img/favicon/favicon.ico">
   <!-- Latest compiled and minified CSS & JS -->
   <!-- <link rel="stylesheet" media="screen" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/yeti/bootstrap.min.css"> -->
   <link rel="stylesheet" media="screen" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/flatly/bootstrap.min.css">
