added 404 page, still trying to correct broken images and facebook auth

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,30 @@
       <p><a class='btn btn-info btn-lg' id='find-lunch-btn' href="/ninjitsu">Find Lunch!</a></p>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-5 col-md-offset-2">
+      <h3>Find a great place to eat in seconds!</h3>
+      <p>LunchBreak.Ninja is a powerful app designed to help you find a great place to eat lunch in seconds, no thought required! Simply tell us your location and click the 'Lunch Me' button. It's that simple.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-5 col-md-offset-5">
+      <h3>Need to find a place to eat within walking distance?</h3>
+      <p>Forget researching restaurant listings, compairing distances and reviews. LunchBreak.Ninja takes care of all that work for you. Just plug in the distance you're willing to travel, and we'll take care of ther rest!</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-5 col-md-offset-2">
+      <h3>No sign up required</h3>
+      <p>While LunchBreak.Ninja offers additional features, like personalized results, to users with accouts, you can still enjoy our app without an account. Try it out.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-5 col-md-offset-5">
+      <h3>Discover great new restaurants and hidden gems</h3>
+      <p>No matter where you are, LunchBreak.Ninja will find a place for you. Even places you never knew about! And because it only gives you highly rated restaurants, you'll never be stuck with a bad lunch again.</p>
+    </div>
+  </div>
 </div>
 
 <% include ./partials/footer %>
