--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,10 @@
 <div class="well well-sm">
-<p class='center'><a href="http://www.yelp.com"><img  src="../img/yelp.png"></a></p>
+  <div class="col-md-4 col-md-offset-4">
+    <ul>
+      <li><a href='/main/about'>About</a></li>
+    </ul>
+  </div>
+  <p class='center'><a href="http://www.yelp.com"><img  src="../img/yelp.png"></a></p>
 </div>
 </body>
 </html>
