added directions feature

--- a/views/ninjitsu/result.ejs
+++ b/views/ninjitsu/result.ejs
@@ -33,6 +33,8 @@
           drawMap(myPoints)
         </script>
       <!-- <img class='img-responsive img-rounded' src="http://www.fillmurray.com/460/300"> -->
+    <br>
+    <p class='center'><a href="https://www.google.com/maps/dir/Current+Location/<%= finalPick[0].location.coordinate.latitude %>,<%= finalPick[0].location.coordinate.longitude %>" target="_blank">Get Directions</a></p>
     </div>
     <div class="col-md-6">
       <div class="result-info">
