--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,21 +14,13 @@ body, html {
   list-style: none;
 }
 
-/*Home Page*/
-
-
-
-/*#home-pic {
-  width: 100%;
-  position: relative;
-}*/
-
-#find-lunch-btn {
+.fill-btn {
   text-align: center;
   width: 100%;
   margin-top: 2.5%;
 }
 
+/*Home Page*/
 
 .title-text {
   background-color: rgba(248, 247, 216, 0.3);
@@ -60,7 +52,7 @@ body, html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  min-height: 300px;
+  min-height: 350px;
   overflow: hidden;
 }
 
@@ -129,8 +121,6 @@ h1 {
   }
 }
 
-
-
 .jumbotron p {
   line-height: 1em;
   margin-left: 0;
@@ -140,14 +130,22 @@ h1 {
 .jumbotron li {
   list-style-type: none;
 }
+
 .signup-2 {
   display: none;
 }
-.result-info {
 
+.result-info {
   margin-left: 5%;
   text-align: left;
 }
+
 #search-form {
   display: none;
+}
+
+/* Footer */
+
+.footer {
+  list-style-type: none;
 }
