--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
-      <p><a class='btn btn-info btn-lg' id='find-lunch-btn' href="/ninjitsu">Find Lunch!</a></p>
+      <p><a class='btn btn-info btn-lg fill-btn' href="/ninjitsu">Find Lunch!</a></p>
     </div>
   </div>
   <div class="row">
