--- a/views/ninjitsu/search.ejs
+++ b/views/ninjitsu/search.ejs
@@ -38,7 +38,7 @@
               </label>
             </div>
           </div>
-          <h3>Take me...</h3>
+          <!-- <h3>Take me...</h3>
           <div class="form-group">
             <div class="radio">
               <label>
@@ -59,8 +59,12 @@
               </label>
               <% } %>
             </div>
+          </div> -->
+          <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+              <button class='btn btn-lg btn-primary fill-btn'>Lunch Me!</button>
+            </div>
           </div>
-          <button class='btn btn-lg btn-primary'>Lunch Me!</button>
         </form>
 
     </div>
