--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Lunch Break Ninja - Take the thought out of Lunch</title>
-  <link rel="icon" href="/public/img/favicon/favicon.ico">
+  <link rel="icon" href="/img/favicon/favicon.ico">
   <!-- Latest compiled and minified CSS & JS -->
-  <!-- <link rel="stylesheet" media="screen" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/yeti/bootstrap.min.css"> -->
-  <link rel="stylesheet" media="screen" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/flatly/bootstrap.min.css">
+  <link rel="stylesheet" media="screen" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/yeti/bootstrap.min.css">
+  <!-- <link rel="stylesheet" media="screen" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/flatly/bootstrap.min.css"> -->
   <script src="//code.jquery.com/jquery.js"></script>
   <script type="text/javascript" src='//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
