--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -69,7 +69,8 @@
               <br><br>
               <input type="submit" value="Sign In" class="btn btn-primary">
           </form>
-          <a href="/auth/login/facebook">Login with Facebook</a>
+          <hr>
+          <div class='center'> <a href="/auth/login/facebook"><img src="/img/fb-log.png"></a></div>
       </div>
     </div>
   </div>
