--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,12 @@
 <br>
 <div class="well well-sm">
-  <div class="col-md-2 col-md-offest-2"><p>&copy 2015 Cody Barrus</p></div>
+  <div class="col-md-2 col-md-offest-2">
+    <p>&copy 2015 Cody Barrus</p>
+
+  </div>
+
+
+
   <div class="col-md-4 col-md-offset-4">
     <ul class='footer'>
       <li><a href='main/about'>About</a></li>
