--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,8 @@ body, html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  min-height: 350px;
+  background-position: top -75px center;
+  min-height: 450px;
   overflow: hidden;
 }
 
