--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,9 +7,9 @@
 
 
 
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-4 ">
     <ul class='footer'>
-      <li><a href='main/about'>About</a></li>
+      <li><a href='/main/about'>About</a></li>
     </ul>
   </div>
   <p class='center'><a href="http://www.yelp.com"><img  src="/img/yelp.png"></a></p>
