--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,5 +14,17 @@
   </div>
   <p class='center'><a href="http://www.yelp.com"><img  src="/img/yelp.png"></a></p>
 </div>
+<!-- Analytics -->
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-62418900-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </body>
 </html>
