--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,18 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Lunch Break Ninja - Take the thought out of Lunch</title>
+  <!-- css -->
   <link rel="icon" href="/img/favicon/favicon.ico">
-  <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" media="screen" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/yeti/bootstrap.min.css">
   <!-- <link rel="stylesheet" media="screen" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/flatly/bootstrap.min.css"> -->
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.8/mapbox.css' rel='stylesheet' />
+  <!-- Javascript -->
   <script src="//code.jquery.com/jquery.js"></script>
   <script type="text/javascript" src='//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
   <script type="text/javascript" src="/js/script.js"></script>
   <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.8/mapbox.js'></script>
-  <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.8/mapbox.css' rel='stylesheet' />
   <script src="//load.sumome.com/" data-sumo-site-id="69c9e5be705196f685e8cc7f1896a53fb94baa3226fd4bb921b07ee3a45ae5d2" async="async"></script><script src="//load.sumome.com/" data-sumo-site-id="69c9e5be705196f685e8cc7f1896a53fb94baa3226fd4bb921b07ee3a45ae5d2" async="async"></script>
+
+
   <meta name="viewport" content="width=device-width">
 </head>
 <body>
